--- a/components/component_props_type.html
+++ b/components/component_props_type.html
@@ -7,7 +7,13 @@
   <h3>Props 型別技巧</h3>
   <input type="number" v-model="money">
 
+  <!-- 直接將值傳入，以字串形式呈現 -->
   <props-type money="300"></props-type>
+
+  <!-- 改為 v-bind 形式，如同 js 表達是，可輸入任何變數或原始型別 -->
+  <props-type :money="true"></props-type>
+  
+  <!-- 使用 v-bind 將外部變數傳入 -->
   <props-type :money="money"></props-type>
 
 
@@ -38,6 +44,8 @@
     },
   });
 
+  // 元件 props-type
+  // 用以呈現外部傳入之值 value，及外部傳入值之型別 typeof
   app.component('props-type', {
     props: ['money'],
     template: `<div>value: {{money}}, typeof:{{ typeof money }}</div>`
