--- a/components/component_slot_props.html
+++ b/components/component_slot_props.html
@@ -7,8 +7,12 @@
   <h3>插巢 Prop</h3>
   <p>將元件內的變數取出使用，稱為 slot prop</p>
   <card>
-    <template>
+    <!-- 因 slot 未給 name，所以設定 default -->
+    <template v-slot:default="slotProps">
       我想取出元件的值來使用
+      {{ slotProps.product }}
+      <!-- 可取出不同值 -->
+      {{ slotProps.product.name }}
     </template>
   </card>
   <hr>
@@ -18,7 +22,13 @@
     <template #header>
       買早餐
     </template>
-    <template #default>
+    <!-- slot 無名稱為 default -->
+    <!-- 使用 {} 插入物件取出值 -->
+    <!-- 若傳出時有少傳變數，可在外層變數設定預設值 -->
+    <template #default="{ product, veganName='預設：非素' }">
+      <!-- 可取出 2 個結果：外部傳入之 product、解析回傳之是否為素食結果 -->
+      {{ product }}
+      {{ veganName }}
     </template>
   </card2>
 </div>
@@ -57,6 +67,7 @@
     props: ['product'],
     data() {
       return {
+        // 新加上 veganName
         veganName: ''
       }
     },
